# simple_in_mem_vector

./: .gitignore  Cargo.toml  README.md
src/: communication.rs  embedding.rs  main.rs  parser.rs
src/communication/: serialization.rs  server.rs
src/embedding/: embedded_model.rs  openai_client.rs
src/parser/: parser.rs
src/query_manager/: query_manager.rs
src/storage_engine/: in_memory.rs
