[package]
name = "socks_to_be_me"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
openai_dive = "1.4.3"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = {version =  "1.52.3", features = ["full"] }
actix-web = "4.14.0"
ndarray = "0.17.2"
pdfsink-rs = "0.2.9"
text-splitter = "0.32.0"
